using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationTags 
{
    public const string State = "State";
    public const string HeartPuff = "Puff";
    public const string Collapse = "Collapse";
    public const string Hit = "Hit";
    public const string Attack = "Attack";
    public const string Dead = "Dead";
    public const string Shoot = "Shoot";

}
public class ObjectTags
{
    public const string Heart = "Heart";
    public const string Coconut = "Coconut";
    public const string Obstacle = "Obstacle";
    public const string Spikes = "Spikes";
    public const string Monster = "Monster";
    public const string Character = "Character";
    public const string CoconutBullet = "CoconutBullet";
    public const string Barrel = "Barrel";
    public const string Floor = "Floor";

    public const string Bullet = "Bullet";
    public const string Bottle = "Bottle";
    public const string Boss = "Boss";



}
public class ControllerTags
{
    public const string Horizontal = "Horizontal";
    public const string Jump = "Jump";
    public const string FireLeftMouseButton = "Fire1";
    public const string GameManager = "GameManager";
    public const string AudioManager = "AudioManager";


}

public class SoundTags
{
    public const string BossMusic = "bossMusic";
    public const string BossDeathSequence = "bossDeathSequence";
    public const string BossExplosion = "bossExplosion";
    public const string LevelPassed = "levelPassed";
    public const string LevelMusic = "levelMusic";
    public const string Sfx = "sfx";

}
